src/objects/smagicinteract__Keyword_Action_Config__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Field_To_Update__c</fullName>
        <label>Field To Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
        <relationshipLabel>Keyword Action Configs</relationshipLabel>
        <relationshipName>Keyword_Action_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Keyword Action Config</label>
    <nameField>
        <label>Keyword Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Keyword Action Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>